--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,13 +3,16 @@
 	name = langurmonkey
 	email = me@tonisagrista.com
 	signingkey = 2FD2A59C1D734C1F
+
 [filter "lfs"]
 	required = true
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
+
 [push]
 	default = matching
+
 [alias]
     lg1 = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
     lg2 = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)' --all
@@ -31,21 +34,37 @@
     bm = branch --merged
     discard = !git stash save --keep-index --include-untracked && git stash drop
     dd = diff --dirstat --find-copies --find-renames --histogram --color
+
 [core]
     autocrlf = input
     eol = lf
+    pager = delta
+
 [diff]
     tool = vimdiff
+    colorMoved = default
+
 [merge]
     tool = vimdiff
+    conflictstyle = diff3
 
 [commit]
 	gpgsign = true
+
 [pull]
 	rebase = true
+
 [log]
 	mailmap = true
+
 [init]
 	defaultBranch = master
+
+[interactive]
+    diffFilter = delta --color-only
+
+[delta]
+    navigate = true
+
 [rerere]
 	enabled = 1
