--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -52,7 +52,7 @@ set use_preview_script true
 set automatically_count_files true
 
 # Open all images in this directory when running certain image viewers
-# like feh or sxiv?  You can still open selected files by marking them.
+# like feh or imv?  You can still open selected files by marking them.
 set open_all_images true
 
 # Be aware of version control systems and display information.
