--- a/i3/config
+++ b/i3/config
@@ -160,7 +160,7 @@ bindsym XF86MonBrightnessUp exec brightness+
 bindsym XF86MonBrightnessDown exec brightness-
 
 # screenshots
-bindsym Print exec maim $HOME/Pictures/Screenshots/screenshot_%Y_%m_%d_%H_%M_%S.png && notify-send "Screenshot saved to ~/Pictures/$(\ls -Art /home/tsagrista/Pictures | tail -n 1)"
+bindsym Print exec maim -f jpg $HOME/Pictures/Screenshots/screenshot_$(date -u +"%Y_%m_%d_%H_%M_%S").png && notify-send "Screenshot saved to ~/Pictures/$(\ls -Art /home/tsagrista/Pictures/Screenshots | tail -n 1)"
 
 # maim & gimp
 bindsym $mod+Print exec maim -e 'mv $f /tmp/ && gimp /tmp/$f'
