--- a/sway/config
+++ b/sway/config
@@ -414,27 +414,27 @@ exec_always --no-startup-id mpDris2
 # Status Bar:
 #
 # Read `man 5 sway-bar` for more information about this section.
-bar {
-  status_command i3blocks -c $HOME/.config/i3blocks/config
-  tray_output primary
-  workspace_buttons yes
-  workspace_min_width 50
-  strip_workspace_numbers no
+#bar {
+#  status_command i3blocks -c $HOME/.config/i3blocks/config
+#  tray_output primary
+#  workspace_buttons yes
+#  workspace_min_width 50
+#  strip_workspace_numbers no
 
-  position top
-  font pango:JetBrainsMono Nerd Font 10
+#  position top
+#  font pango:JetBrainsMono Nerd Font 10
 
-  colors {
-    background #000000
-    statusline #ffffff
+#  colors {
+#    background #000000
+#    statusline #ffffff
  
-    #class             border  backgr  text   
-    focused_workspace  #000000 #295499 #ffffff
-    inactive_workspace #000000 #000000 #aaaaaa
-    active_workspace   #000000 #000000 #ffffff
-    urgent_workspace   #f35888 #a31838 #ffffff
-  }
-}
+#    #class             border  backgr  text   
+#    focused_workspace  #000000 #295499 #ffffff
+#    inactive_workspace #000000 #000000 #aaaaaa
+#    active_workspace   #000000 #000000 #ffffff
+#    urgent_workspace   #f35888 #a31838 #ffffff
+#  }
+#}
 bar {
   swaybar_command waybar
   workspace_buttons yes
