--- a/sway/config
+++ b/sway/config
@@ -221,7 +221,8 @@ bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws0
 
 # default workspaces
-assign [class="qutebrowser"] $ws2
+assign [app_id="org.qutebrowser.qutebrowser"] $ws2
+assign [class="firefox"] $ws2
 assign [class="Thunderbird"] $ws3
 assign [class="Eclipse"] $ws4
 assign [class="jetbrains-idea-ce"] $ws4
