--- a/i3/config
+++ b/i3/config
@@ -233,6 +233,7 @@ assign [class="telegram-desktop"] $ws9
 assign [class="discord"] $ws9
 assign [class="Signal"] $ws9
 assign [class="Steam"] $ws5
+assign [class="itch"] $ws5
 assign [class="FreeTube"] $ws6
 
 # default floating
