fix: java swing apps on wayland

--- a/env/.env_global
+++ b/env/.env_global
@@ -116,6 +116,11 @@ export CALIBRE_USE_DARK_PALETTE=1
 do-source $DOTFILES/env/.aliases
 
 #
+# WAYLAND
+# 
+do-source $DOTFILES/env/.wayland
+
+#
 # ZSH-specific shit
 #
 if [ ! -z "$ZSH_VERSION" ]; then
