fix: red no-italics mode in sway/waybar.

--- a/waybar/config
+++ b/waybar/config
@@ -16,7 +16,7 @@
             }
         },
         "sway/mode": {
-            "format": "<span style=\"italic\">{}</span>"
+            "format": "{}"
         },
             "mpd": {
                 "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title}  {volume}%",
