refactor: remove thefuck, separate functions from aliases.

--- a/env/.env_global
+++ b/env/.env_global
@@ -116,6 +116,11 @@ export CALIBRE_USE_DARK_PALETTE=1
 do-source $DOTFILES/env/.aliases
 
 #
+# FUNCTIONS
+# 
+do-source $DOTFILES/env/.functions
+
+#
 # WAYLAND
 # 
 do-source $DOTFILES/env/.wayland
