--- a/env/.env_zsh
+++ b/env/.env_zsh
@@ -14,6 +14,10 @@ bindkey '^R' history-incremental-search-backward
 # Disable zsh matching
 setopt +o nomatch
 
+# Automatically add directory to stack when using `cd`. Use the commands
+# `pushd`, `popd` and `dirs -v` to use the stack.
+setopt auto_pushd
+
 # ZSH bindings
 [ -f ~/.dotfiles/zsh/.zsh_bindings ] && source ~/.dotfiles/zsh/.zsh_bindings
 
