--- a/env/.env_zsh
+++ b/env/.env_zsh
@@ -44,6 +44,9 @@ do-source $DOTFILES/zsh/plugins/history-substring-search/history-substring-searc
 # LF completion
 fpath=(~/.dotfiles/zsh/plugins/lf $fpath)
 
+# Load zfm
+do-source $DOTFILES/zsh/plugins/zfm/zfm.plugin.zsh
+
 # COMPLETION
 # Enable completion system
 autoload -U compinit; compinit
