--- a/env/.env_global
+++ b/env/.env_global
@@ -70,7 +70,7 @@ export LD_LIBRARY_PATH=$VULKAN_SDK/lib
 export VK_LAYER_PATH=$VULKAN_SDK/etc/explicit_layer.d
 
 # Android SDK
-export ANDROID_SDK_ROOT=$PROGRAMS/Android/sdk
+export ANDROID_SDK_ROOT=/opt/android-sdk
 
 # NNN config
 do-source "$DOTFILES"/nnn/conf.sh
