--- a/i3/config
+++ b/i3/config
@@ -405,6 +405,11 @@ exec --no-startup-id pasystray
 exec --no-startup-id mons -a > /dev/null 2>&1
 
 #
+# Autotiling
+#
+exec --no-startup-id autotiling
+
+#
 # playerctld
 #
 exec --no-startup-id playerctld
