feat: check for existence of 'keychain' and 'uberzug' commands when needed.

--- a/env/.env_global
+++ b/env/.env_global
@@ -80,9 +80,6 @@ export OPENER="$DOTFILES/lf/open"
 do-source "$DOTFILES"/lf/lf_icons.sh
 do-source "$DOTFILES/lf/lfcd.sh"
 
-# FFF config
-do-source "$DOTFILES"/fff/conf.sh
-
 # Less
 export LESS=-R
 export LESS_TERMCAP_mb=$'\E[1;31m'     # begin blink
@@ -136,7 +133,11 @@ fi
 # Set SSH to use gpg-agent
 unset SSH_AGENT_PID
 if [ "${gnupg_SSH_AUTH_SOCK_by:-0}" -ne $$ ]; then
-export SSH_AUTH_SOCK="~/.gnupg/S.gpg-agent.ssh"
+    export SSH_AUTH_SOCK="~/.gnupg/S.gpg-agent.ssh"
 fi
+
 # Uncomment to unlock ssh key by default (asks for password)
-eval $(keychain --quiet --eval $HOME/.ssh/id_rsa $HOME/.ssh/id_ed25519)
+if command -v keychain &> /dev/null
+then
+    eval $(keychain --quiet --eval $HOME/.ssh/id_rsa $HOME/.ssh/id_ed25519)
+fi
