feat: nvim is default editor, use evil lualine.

--- a/env/.env_global
+++ b/env/.env_global
@@ -32,7 +32,7 @@ export GPGKEY=448C2B189756743013D5F7C22FD2A59C1D734C1F
  if [[ -n $SSH_CONNECTION ]]; then
    export EDITOR='vim'
  else
-   export EDITOR='lvim'
+   export EDITOR='nvim'
  fi
 export PAGER="less"
 export MANPAGER="sh -c 'col -bx | bat -l man -p'"
