--- a/i3/config
+++ b/i3/config
@@ -179,16 +179,16 @@ floating_minimum_size 450x150
 floating_maximum_size -1x-1
 
 # WORKSPACES
-set $ws1 "1  "
+set $ws1 "1 "
 set $ws2 "2  "
 set $ws3 "3 﫯 "
 set $ws4 "4  "
 set $ws5 "5  "
 set $ws6 "6  "
 set $ws7 "7  "
-set $ws8 "8  "
-set $ws9 "9  "
-set $ws0 "10 卵 "
+set $ws8 "8 ﮊ "
+set $ws9 "9  "
+set $ws0 "10  "
 # set $ws1 "1"
 # set $ws2 "2"
 # set $ws3 "3 "
