--- a/alacritty/alacritty-hidpi.yml
+++ b/alacritty/alacritty-hidpi.yml
@@ -89,7 +89,7 @@ font:
     #   - (macOS) Menlo
     #  - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: "JetBrainsMono Nerd Font"
+    family: "Hack Nerd Font"
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -100,7 +100,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "JetBrainsMono Nerd Font"
+    family: "Hack Nerd Font"
 
     # The `style` can be specified to pick a specific face.
     style: Bold
@@ -112,10 +112,14 @@ font:
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
     #family: monospace
-    family: "JetBrainsMono Nerd Font"
+    family: "Hack Nerd Font"
 
     # The `style` can be specified to pick a specific face.
     style: Italic
+
+  bold_italic:
+    family: "Hack Nerd Font"
+    style: Bold Italic
 
   # Point size
   size: 10.5
