--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -93,10 +93,10 @@ font:
     #   - (macOS) Menlo
     #  - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: "JetBrainsMono Nerd Font"
+    family: "Hack Nerd Font"
 
     # The `style` can be specified to pick a specific face.
-    #style: Regular
+    style: Regular
 
   # Bold font face
   bold:
@@ -104,7 +104,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: "JetBrainsMono Nerd Font"
+    family: "Hack Nerd Font"
 
     # The `style` can be specified to pick a specific face.
     style: Bold
@@ -116,10 +116,14 @@ font:
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
     #family: monospace
-    family: "JetBrainsMono Nerd Font"
+    family: "Hack Nerd Font"
 
     # The `style` can be specified to pick a specific face.
     style: Italic
+
+  bold_italic:
+    family: "Hack Nerd Font"
+    style: Bold Italic
 
   # Point size
   size: 12.0
