feat: add  variable to point to gaiasky-docs.

--- a/env/.env_global
+++ b/env/.env_global
@@ -48,6 +48,7 @@ export TA=$PROJ/time-analysis/src
 export TAR=$PROJ/time-analysis-res/results
 export GS=$PROJ/gaiasky
 export GSC=$PROJ/gaiasky-catgen
+export GSD=$PROJ/gaiasky-docs
 export RTS=$PROJ/rts-engine-private
 export WEB=$PROJ/langurmonkey.gitlab.io
 export PHD=$PROJ/phd_thesis
