feat: add webdeploy location.

--- a/env/.env_global
+++ b/env/.env_global
@@ -51,6 +51,7 @@ export GSC=$PROJ/gaiasky-catgen
 export GSD=$PROJ/gaiasky-docs
 export RTS=$PROJ/rts-engine-private
 export WEB=$PROJ/langurmonkey.gitlab.io
+export WEBDEPLOY=$PROJ/website-deploy
 export PHD=$PROJ/phd_thesis
 
 # JVM
