feat: change website source dir.

--- a/env/.env_global
+++ b/env/.env_global
@@ -50,7 +50,7 @@ export GS=$PROJ/gaiasky
 export GSC=$PROJ/gaiasky-catgen
 export GSD=$PROJ/gaiasky-docs
 export RTS=$PROJ/rts-engine-private
-export WEB=$PROJ/langurmonkey.gitlab.io
+export WEB=$PROJ/website-source
 export WEBDEPLOY=$PROJ/website-deploy
 export PHD=$PROJ/phd_thesis
 
