fix: npm location format.

--- a/env/.env_global
+++ b/env/.env_global
@@ -100,7 +100,7 @@ GPG_TTY=$(tty)
 export GPG_TTY
 
 if cmd-exists npm; then
-    export NODE_PATH=$NODE_PATH:$(npm root -g)
+    export NODE_PATH=$NODE_PATH:$(npm root --location=global)
 fi
 
 # QT
