--- a/screen/.screenrc
+++ b/screen/.screenrc
@@ -9,6 +9,7 @@ defscrollback 5000
 startup_message off
 
 # 256 colors
+term screen-256color
 attrcolor b ".I"
 termcapinfo xterm 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm'
 defbce on
