fix: issues with tmux conf.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,6 @@
 set-window-option -g automatic-rename off
 set-option -g allow-rename off 
 
-run-shell ~/git/tmux-resurrect/resurrect.tmuxet -g history-limit 10000
 
 # enable mouse
 set -g mouse on
@@ -52,3 +51,6 @@ bind-key C-s send-prefix -2
 
 # don't suspend-client
 unbind-key C-z
+
+# run resurrect
+run-shell ~/Projects/tmux-resurrect/resurrect.tmux
