--- a/sway/config
+++ b/sway/config
@@ -140,6 +140,13 @@ bindsym $mod+n exec --no-startup-id $HOME/.dotfiles/bin/i3-new-workspace
 # focus the parent container
 bindsym $mod+a focus parent
 
+# pass-through mode for remote desktops
+mode "pass-through" {
+    bindsym $mod+y mode "default"
+}
+
+bindsym $mod+y mode "pass-through"
+
 # media player controls XF86Audio and $mod+Control
 bindsym $mod+Control+m exec "$myterm --class wm-floating-big --command ncmpcpp"
 bindsym XF86AudioPrev exec playerctl previous
