feat: background setting in lf, use mailcap to open, more.

--- a/env/.env_global
+++ b/env/.env_global
@@ -77,7 +77,7 @@ export ANDROID_SDK_ROOT=/opt/android-sdk
 do-source "$DOTFILES"/nnn/conf.sh
 
 # LF config
-export OPENER="$DOTFILES/lf/open"
+export OPENER="run-mailcap"
 do-source "$DOTFILES"/lf/lf_icons.sh
 do-source "$DOTFILES/lf/lfcd.sh"
 
