--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -478,9 +478,9 @@ map oE chain set sort=extension; set sort_reverse=True
 
 map dc get_cumulative_size
 
-# Images
+# Set background automatically
 map bg shell cp %f ~/Pictures/wallpaper.jpg && feh --bg-fill ~/Pictures/wallpaper.jpg
-map bw shell cp %f ~/Pictures/wallpaper.jpg && ~/.local/bin/wal -c && ~/.local/bin/wal -a 85 -i ~/Pictures/wallpaper.jpg
+map bw shell cp %f ~/Pictures/wallpaper.jpg && wal -c && wal -a 85 -i ~/Pictures/wallpaper.jpg
 
 # Settings
 map zc    set collapse_preview!
