--- a/i3/config
+++ b/i3/config
@@ -22,7 +22,7 @@ gaps outer 0
 
 # Colors
 set_from_resource $wal-fg i3wm.color7 #f0f0f0
-set_from_resource $wal-bg i3wm.color19 #26398e
+set_from_resource $wal-bg i3wm.color19 #4659de
 
 set $bg-color 	         i3wm.color2
 set $inactive-bg-color   #666666
