feat: fix thunderbird to ws3, add dbz kai bookmark, mpv to use all subtitles in folder.

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -42,6 +42,13 @@ osc=no
 # of the currently played file.
 #audio-channels=empty
 
+
+######################
+# subtitles settings #
+######################
+sub-auto=all
+
+
 ##################
 # other settings #
 ##################
