--- a/env/.env_fun
+++ b/env/.env_fun
@@ -11,9 +11,9 @@ command_exists () {
 }
 # Let's hear the cow say...
 if command_exists fortune && command_exists cowsay && command_exists lolcat; then
-    fortune | cowsay -f $(\ls /usr/share/cows/|shuf -n 1) | lolcat
+    fortune | cowsay -f $(\ls /usr/share/cows/*.cow|shuf -n 1) | lolcat
 elif command_exists fortune && command_exists cowsay && ! command_exists lolcat; then
-    fortune | cowsay -f $(\ls /usr/share/cows/|shuf -n 1)
+    fortune | cowsay -f $(\ls /usr/share/cows/*.cow|shuf -n 1)
 elif command_exists fortune && ! command_exists cowsay && command_exists lolcat; then
     fortune | lolcat
 elif command_exists fortune; then
