fix: speed up zsh loading time.

--- a/env/.env_global
+++ b/env/.env_global
@@ -63,18 +63,11 @@ export TOPCAT=$PROGRAMS/Topcat
 # Path
 export PATH=$PATH:$HOME/.local/bin:$HOME/.dotfiles/bin:$HOME/.cargo/bin:.
 
-# Vulkan SDK
-export VULKAN=$HOME/Workspaces/vulkan
-export VULKAN_SDK=$VULKAN/VulkanSDK/1.1.73.0/x86_64
-#export PATH=$PATH:$VULKAN_SDK/bin
-export LD_LIBRARY_PATH=$VULKAN_SDK/lib
-export VK_LAYER_PATH=$VULKAN_SDK/etc/explicit_layer.d
-
 # Android SDK
 export ANDROID_SDK_ROOT=/opt/android-sdk
 
 # NNN config
-do-source "$DOTFILES"/nnn/conf.sh
+# do-source "$DOTFILES"/nnn/conf.sh
 
 # LF config
 export OPENER="run-mailcap"
@@ -98,9 +91,10 @@ export BROWSER=qutebrowser
 GPG_TTY=$(tty)
 export GPG_TTY
 
-if cmd-exists npm; then
-    export NODE_PATH=$NODE_PATH:$(npm root --location=global)
-fi
+# npm is commented out, it takes a loooong time!
+# if cmd-exists npm; then
+#     export NODE_PATH=$NODE_PATH:$(npm root --location=global)
+# fi
 
 # QT
 export QT_QPA_PLATFORMTHEME=qt5ct
