--- a/env/.env_zsh
+++ b/env/.env_zsh
@@ -24,28 +24,22 @@ setopt auto_pushd
 # ZSH PLUGINS
 
 # Load zsh-syntax-highlighting
-do-source /usr/share/zsh/plugins/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
+# do-source /usr/share/zsh/plugins/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 
 # Load zsh-autosuggestions
-do-source /usr/share/zsh/plugins/zsh-autosuggestions/zsh-autosuggestions.zsh
-
-# Load zsh-history-substring-search
-do-source /usr/share/zsh/plugins/zsh-history-substring-search/zsh-history-substring-search.zsh
+# do-source /usr/share/zsh/plugins/zsh-autosuggestions/zsh-autosuggestions.zsh
 
 # Load colorize
-do-source $DOTFILES/zsh/plugins/colorize/colorize.plugin.zsh
+# do-source $DOTFILES/zsh/plugins/colorize/colorize.plugin.zsh
 
 # Load z
-do-source $DOTFILES/zsh/plugins/z/z.plugin.zsh
-
-# Load history substring search
-do-source $DOTFILES/zsh/plugins/history-substring-search/history-substring-search.plugin.zsh
+# do-source $DOTFILES/zsh/plugins/z/z.plugin.zsh
 
 # LF completion
-fpath=(~/.dotfiles/zsh/plugins/lf $fpath)
+# fpath=(~/.dotfiles/zsh/plugins/lf $fpath)
 
 # Load zfm
-do-source $DOTFILES/zsh/plugins/zfm/zfm.plugin.zsh
+# do-source $DOTFILES/zsh/plugins/zfm/zfm.plugin.zsh
 
 # COMPLETION
 # Enable completion system
