fix: re-enable zsh z plugin.

--- a/env/.env_zsh
+++ b/env/.env_zsh
@@ -33,7 +33,7 @@ setopt auto_pushd
 # do-source $DOTFILES/zsh/plugins/colorize/colorize.plugin.zsh
 
 # Load z
-# do-source $DOTFILES/zsh/plugins/z/z.plugin.zsh
+do-source $DOTFILES/zsh/plugins/z/z.plugin.zsh
 
 # LF completion
 # fpath=(~/.dotfiles/zsh/plugins/lf $fpath)
