fix: re-enable some zsh plugins (suggestions, colorize).

--- a/env/.env_zsh
+++ b/env/.env_zsh
@@ -27,10 +27,10 @@ setopt auto_pushd
 # do-source /usr/share/zsh/plugins/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 
 # Load zsh-autosuggestions
-# do-source /usr/share/zsh/plugins/zsh-autosuggestions/zsh-autosuggestions.zsh
+do-source /usr/share/zsh/plugins/zsh-autosuggestions/zsh-autosuggestions.zsh
 
 # Load colorize
-# do-source $DOTFILES/zsh/plugins/colorize/colorize.plugin.zsh
+do-source $DOTFILES/zsh/plugins/colorize/colorize.plugin.zsh
 
 # Load z
 do-source $DOTFILES/zsh/plugins/z/z.plugin.zsh
@@ -39,7 +39,7 @@ do-source $DOTFILES/zsh/plugins/z/z.plugin.zsh
 # fpath=(~/.dotfiles/zsh/plugins/lf $fpath)
 
 # Load zfm
-# do-source $DOTFILES/zsh/plugins/zfm/zfm.plugin.zsh
+do-source $DOTFILES/zsh/plugins/zfm/zfm.plugin.zsh
 
 # COMPLETION
 # Enable completion system
