--- a/waybar/config
+++ b/waybar/config
@@ -111,7 +111,7 @@
                 "format-linked": "{ifname} (No IP)",
                 "format-disconnected": "Disconnected ⚠",
                 "format-alt": "{ifname}: {ipaddr}/{cidr}",
-                "on-click-right": "alacritty --class wm-floating-big --command nmtui"
+                "on-click-right": "kitty --class=wm-floating-big nmtui"
             },
             "pulseaudio": {
                 // "scroll-step": 1, // %, can be a float
@@ -131,7 +131,7 @@
                     "default": ["", "", ""]
                 },
                 "on-click": "pavucontrol",
-                "on-click-right": "alacritty --class wm-floating-big --command pulsemixer"
+                "on-click-right": "kitty --class=wm-floating-big pulsemixer"
             },
             "custom/media": {
                 "format": "{icon} {}",
