--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -14,3 +14,4 @@ enabled_layouts         all
 
 include                 ~/.cache/wal/colors-kitty.conf
 background              #000000
+background_opacity      0.85
