--- a/i3/config
+++ b/i3/config
@@ -381,38 +381,29 @@ mode "resize" {
 # STARTUP APPLICATIONS
 #
 
-# Repeat interval and delay
-exec_always --no-startup-id xset r rate 200 45 # initial delay 200 ms, with a rate of 45 repeats per second
-
-# Keyboard layout definition. Switch escape and caps lock key
-exec_always --no-startup-id setxkbmap -model pc104 -layout us,es -option 'grp:alt_space_toggle,caps:swapescape,eurosign:e'
-
-# Activate numlock
-exec_always --no-startup-id numlockx
-
 #
 # TRACKPAD  - Dell XPS13 
 #
 # trackpad speed
-exec_always --no-startup-id xinput set-prop 'DELL07E6:00 06CB:76AF Touchpad' 'libinput Accel Speed' 0.6
+exec_always --no-startup-id "xinput set-prop 'DELL07E6:00 06CB:76AF Touchpad' 'libinput Accel Speed' 0.6"
 # tapping enabled
-exec_always --no-startup-id xinput set-prop 'DELL07E6:00 06CB:76AF Touchpad' 'libinput Tapping Enabled' 1
+exec_always --no-startup-id "xinput set-prop 'DELL07E6:00 06CB:76AF Touchpad' 'libinput Tapping Enabled' 1"
 
 #
 # XOB - indicator bars for volume and brightness
 #
-#exec_always --no-startup-id $HOME/.dotfiles/bin/pulse-vol-watcher | xob -s volume
-#exec_always --no-startup-id $HOME/.dotfiles/bin/brightness-watcher | xob -s brightness
+#exec_always --no-startup-id "$HOME/.dotfiles/bin/pulse-vol-watcher | xob -s volume"
+#exec_always --no-startup-id "$HOME/.dotfiles/bin/brightness-watcher | xob -s brightness"
 
 #
 # SYSTEM TRAY
 #
 # network manager
-exec --no-startup-id nm-applet
+exec --no-startup-id "nm-applet"
 # bluetooth
-exec --no-startup-id blueman-applet
+exec --no-startup-id "blueman-applet"
 # volume
-exec --no-startup-id pasystray
+exec --no-startup-id "pasystray"
 
 #
 # MONITORS AND XRANDR - autodetect plug-in monitors
@@ -422,39 +413,52 @@ exec --no-startup-id mons -a > /dev/null 2>&1
 #
 # Autotiling
 #
-exec_always --no-startup-id autotiling
+exec_always --no-startup-id "autotiling"
 
 #
 # playerctld
 #
-exec --no-startup-id playerctld
+exec --no-startup-id "playerctld"
 
 
 #
 # UDISKIE - automount
 #
-exec --no-startup-id udiskie -f $HOME/.dotfiles/bin/ranger-term --tray
+exec --no-startup-id "udiskie -f $HOME/.dotfiles/bin/ranger-term --tray"
 
 # NO SCREENSAVER
-exec --no-startup-id $HOME/.dotfiles/bin/no-screenoff.sh
+exec --no-startup-id "$HOME/.dotfiles/bin/no-screenoff.sh"
 
 # PYWAL
-exec --no-startup-id wal -a 85 --theme $HOME/.dotfiles/pywal/themes/dark/base16-google.json
+exec --no-startup-id "wal -a 85 --theme $HOME/.dotfiles/pywal/themes/dark/base16-google.json"
 
 # 
 # COMPOSITOR - window compositor
 #
-exec --no-startup-id $HOME/.dotfiles/bin/togglepicom
+exec --no-startup-id "$HOME/.dotfiles/bin/togglepicom"
 
 #
 # RANDR - monitor setup
 #
-exec_always --no-startup-id $HOME/.local/bin/current-randr.sh
+exec_always --no-startup-id "$HOME/.local/bin/current-randr.sh"
 
 #
 # mpDris2 - MPRIS2 support for mpd
 # 
-exec_always --no-startup-id mpDris2
+exec_always --no-startup-id "mpDris2"
+
+#
+# KEYBOARD configuration
+#
+
+# Repeat interval and delay
+exec_always --no-startup-id "xset r rate 200 45"
+
+# Keyboard layout definition. Switch escape and caps lock key
+exec_always --no-startup-id "setxkbmap -model pc104 -layout us,es -option 'grp:alt_space_toggle,caps:swapescape,eurosign:e'"
+
+# Activate numlock
+exec_always --no-startup-id "numlockx"
 
 #
 # WALLPAPER - after screens have been setup
