none: helix commented soft wrap.

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -26,8 +26,13 @@ select = "underline"
 hidden = false
 parents = false
 
+# Do not render white spaces
 [editor.whitespace]
 render = "none"
+
+# Enable soft wrapping
+#[editor.soft-wrap]
+#enable = true
 
 [editor.indent-guides]
 render = false
